--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,1 +1,17 @@
-<h1>HOME PAGE</h1>
+<div class='mt-4'>
+  <div class='row'>
+    {{#each courses}}
+      <div class='col-sm-6 col-lg-4'>
+        <div class='card card-course-item'>
+          <img src='{{this.image}}' class='card-img-top' alt='...' />
+          <div class='card-body'>
+            <h5 class='card-title'>Title</h5>
+            <p class='card-text'>Some quick example text to build on the card
+              title and make up the bulk of the card's content.</p>
+            <a href='#' class='btn btn-primary'>Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    {{/each}}
+  </div>
+</div>
