--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -3,3 +3,19 @@
 .card-course-item {
   margin-top: 16px;
 }
+
+.user-avatar {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  margin-left: 4px;
+}
+
+a {
+  text-decoration: none;
+}
+
+.checkbox-select-all-options {
+  width: 160px;
+  margin: 0 16px;
+}
